[package]
name = "pyimportparse"
description = "A rust crate to parse python imports"
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/Peter554/pyimportparse/"
documentation = "https://docs.rs/pyimportparse/latest/pyimportparse/"
exclude = [
    ".github/*",
    "vendor/*",
    "Taskfile.yml",
]

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"

[dev-dependencies]
itertools = "0.14.0"
parameterized = "2.0.0"
pretty_assertions = "1.4.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"

